Created the Success Profiles section in the template

--- a/success_profile_mock.html
+++ b/success_profile_mock.html
@@ -105,6 +105,15 @@
         <!-- Top Row with Stats Ends -->
 
         <!-- Repeating Data Row Sections Begins -->
+        <div class="row datarow-title-block">
+            <div class="datarow-title-head">
+                Success Profiles
+            </div>
+            <div class="datarow-title-action">
+                <span><a href="#">BROWSE ></a></span>
+                <span><a href="#">CREATE ></a></span>
+            </div>
+        </div>
         <div class="row datarow">
             <div class="datarow-top-ribbon"></div>
             <div class="datarow-content">
@@ -122,18 +131,43 @@
                 <div class="col-lg-4 col-md-6 datarow-col">
                     <div class="datarow-block-data">
                         <span class="datarow-col-title">RECENTLY CREATED</span>
+
+                        <span class="datarow-col-data">Mid-Level Manager</span>
+                        <span class="datarow-col-data">Mid-Level Manager IT 16</span>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="datarow-block-data">
                         <span class="datarow-col-title">FAVORITES</span>
+
+                        <span class="datarow-col-data">
+                            <span class="glyphicon glyphicon-star fav-icon-star"></span>
+                            Mid-Level Manager
+                        </span>
+                        <span class="datarow-col-data">
+                            <span class="glyphicon glyphicon-star fav-icon-star"></span>
+                            Mid-Level Manager IT 16
+                        </span>
+                        <span class="datarow-col-data">
+                            <span class="glyphicon glyphicon-star fav-icon-star"></span>
+                            Accountant III
+                        </span>
+                        <span class="datarow-col-data">
+                            <span class="glyphicon glyphicon-star fav-icon-star"></span>
+                            Tax Manager 17
+                        </span>
+                        <span class="datarow-col-data">
+                            <span class="glyphicon glyphicon-star fav-icon-star"></span>
+                            Account Finance &amp; Accounting 12
+                        </span>
                     </div>
                 </div>
             </div>
         </div>
         <!-- Repeating Data Row Sections Ends -->
-
         <!-- Three Column Layout Ends -->
+        <div class="dummy">
+        </div>
     </div>
 
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
