--- a/test_rings.html
+++ b/test_rings.html
@@ -5,21 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="css/lib.css" rel="stylesheet">
+    <link href="css/app.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <div class="grade-container large {{gradeScaleHelper gradeScale}}">
+    <div class="grade-container large grade-scale-0">
         <div class="job-grade">
-            <h1 class="grade text-center">test</h1>
-            <h2 class="text-center">chart</h2>
+            <h1 class="grade text-center">0</h1>
+            <h2 class=" text-center">chart</h2>
         </div>
         <div class="chartwell-pies ring active">
             5+5+5+5+5+5+5+5+5+5+5+5+5+5+5+5+5+5+5+5+M
         </div>
     </div>
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="scripts/chartwell1.1.js"></script>
 </body>
 <script>
-    chartwell();
+    $(document).ready(function() {
+        chartwell();
+    });
 </script>
 </html>
