Completed the implementation of the Responsibilities Card

--- a/success_profile_detail_job_mock.html
+++ b/success_profile_detail_job_mock.html
@@ -242,7 +242,7 @@
         </div>
         <!-- Statistics Three Column Row Ends -->
 
-        <!-- Middle Tabs CSS Begins -->
+        <!-- Middle Tabs Row Begins -->
         <div class="row spdj-tabsrow">
             <ul class="spdj-tabs" data-spy="affix" data-offset-top="710">
                 <li><a href="#profile-det">Profile Details</a></li>
@@ -251,9 +251,11 @@
                 <li><a href="#insights">Insights</a></li>
             </ul>
         </div>
-        <!-- Middle Tabs CSS Ends -->
+        <!-- Middle Tabs Row Ends -->
 
+        <!-- Main Row Container holding the side nav and the different cards Begins -->
         <div class="row spdj-main-row">
+            <!-- Side Navbar Begins -->
             <div class="spdj-side-nav-container">
                 <div class="spdj-side-nav" data-spy="affix" data-offset-top="730">
                     <span class="spdj-side-nav-menu spdj-side-nav-title-active">JOB REQUIREMENTS</span>
@@ -276,7 +278,11 @@
                     <span class="spdj-side-nav-menu"><a href="#hiring-role">Work Conditions</a></span>
                 </div>
             </div>
+            <!-- Side Navbar Ends -->
+
+            <!-- Cards Container Begins -->
             <div class="spdj-main-container">
+                <!-- Job Requirements Card Begins -->
                 <div class="spdj-main-jr-card">
                     <div class="spdj-main-jr-title">Job Requirements Overview</div>
                     <div class="spdj-main-jr-desc">
@@ -325,84 +331,106 @@
                         </div>
                     </div>
                 </div>
+                <!-- Job Requirements Card Ends -->
 
+                <!-- Responsibilities Card Begins -->
                 <div class="spdj-main-respon-card">
                     <div class="spdj-main-respon-title-container">
-                        <span class="spdj-main-respon-icon"><img src="images/responsibility-icon@2x.png"/></span>
-                        <span class="spdj-main-respon-title">Responsibilities</span>
-                        <span class="spdj-main-respon-help"><span class="glyphicon glyphicon-question-sign"></span></span>
+                        <span class="spdj-main-respon-title">
+                            <span class="spdj-main-respon-icon"><img src="images/responsibility-icon@2x.png"/></span>
+                            Responsibilities
+                            <span class="spdj-main-respon-help"><span class="glyphicon glyphicon-question-sign"></span></span>
+                        </span>
                         <span class="spdj-main-respon-lvl-title">Level Required</span>
                     </div>
                     <div class="spdj-main-respon-item-container">
-                        <span class="spdj-main-respon-item-title">
-                            <span class="glyphicon glyphicon-circle-arrow-up spdj-main-respon-item-icon"></span>
-                            Independence
-                        </span>
-                        <span class="spdj-main-respon-item-detail">
-                            Prefers an entrepreneurial approach and limited organizational constraints.
-                        </span>
-                        <div class="spdj-main-respon-item-chart">
-                            <div class="chartwell-pies">
-                                10+90+O
+                        <div class="spdj-main-respon-item-text-container">
+                            <span class="spdj-main-respon-item-title">
+                                <span class="glyphicon glyphicon-circle-arrow-up spdj-main-respon-item-icon"></span>
+                                Independence
+                            </span>
+                            <span class="spdj-main-respon-item-detail">
+                                Prefers an entrepreneurial approach and limited organizational constraints.
+                            </span>
+                        </div>
+                        <div class="spdj-main-respon-item-chart-container">
+                            <div class="spdj-main-respon-item-chart">
+                                <div class="chartwell-pies">10+90+O</div>
+                                <div class="spdj-main-respon-item-stat">90%</div>
                             </div>
                         </div>
                     </div>
                     <div class="spdj-main-respon-item-container">
-                        <span class="spdj-main-respon-item-title">
-                            <span class="glyphicon glyphicon-circle-arrow-up spdj-main-respon-item-icon"></span>
-                            Challenge
-                        </span>
-                        <span class="spdj-main-respon-item-detail">
-                            Motivated by achievement in the face of tough obstacles.
-                        </span>
-                        <div class="spdj-main-respon-item-chart">
-                            <div class="chartwell-pies">
-                                10+90+O
+                        <div class="spdj-main-respon-item-text-container">
+                            <span class="spdj-main-respon-item-title">
+                                <span class="glyphicon glyphicon-circle-arrow-up spdj-main-respon-item-icon"></span>
+                                Challenge
+                            </span>
+                            <span class="spdj-main-respon-item-detail">
+                                Motivated by achievement in the face of tough obstacles.
+                            </span>
+                        </div>
+                        <div class="spdj-main-respon-item-chart-container">
+                            <div class="spdj-main-respon-item-chart">
+                                <div class="chartwell-pies">10+90+O</div>
+                                <div class="spdj-main-respon-item-stat">90%</div>
                             </div>
                         </div>
                     </div>
                     <div class="spdj-main-respon-item-container">
-                        <span class="spdj-main-respon-item-title">
-                            Collaboration
-                        </span>
-                        <span class="spdj-main-respon-item-detail">
-                            A preference for work-related interdependence, group decision making, and pursuing shared goals.
-                        </span>
-                        <div class="spdj-main-respon-item-chart">
-                            <div class="chartwell-pies">
-                                40+60+O
+                        <div class="spdj-main-respon-item-text-container">
+                            <span class="spdj-main-respon-item-title">
+                                Collaboration
+                            </span>
+                            <span class="spdj-main-respon-item-detail">
+                                A preference for work-related interdependence, group decision making, and pursuing shared goals.
+                            </span>
+                        </div>
+                        <div class="spdj-main-respon-item-chart-container">
+                            <div class="spdj-main-respon-item-chart">
+                                <div class="chartwell-pies">40+60+O</div>
+                                <div class="spdj-main-respon-item-stat">60%</div>
                             </div>
                         </div>
                     </div>
                     <div class="spdj-main-respon-item-container">
-                        <span class="spdj-main-respon-item-title">
-                            Power
-                        </span>
-                        <span class="spdj-main-respon-item-detail">
-                            Motivated to seek influence, recognition, and increasing levels of responsibility.
-                        </span>
-                        <div class="spdj-main-respon-item-chart">
-                            <div class="chartwell-pies">
-                                50+50+O
+                        <div class="spdj-main-respon-item-text-container">
+                            <span class="spdj-main-respon-item-title">
+                                Power
+                            </span>
+                            <span class="spdj-main-respon-item-detail">
+                                Motivated to seek influence, recognition, and increasing levels of responsibility.
+                            </span>
+                        </div>
+                        <div class="spdj-main-respon-item-chart-container">
+                            <div class="spdj-main-respon-item-chart">
+                                <div class="chartwell-pies">50+50+O</div>
+                                <div class="spdj-main-respon-item-stat">50%</div>
                             </div>
                         </div>
                     </div>
                     <div class="spdj-main-respon-item-container">
-                        <span class="spdj-main-respon-item-title">
-                            Structure
-                        </span>
-                        <span class="spdj-main-respon-item-detail">
-                            A preference for work-related interdependence, group decision making, and pursuing shared goals.
-                        </span>
-                        <div class="spdj-main-respon-item-chart">
-                            <div class="chartwell-pies">
-                                25+75+O
+                        <div class="spdj-main-respon-item-text-container">
+                            <span class="spdj-main-respon-item-title">
+                                Structure
+                            </span>
+                            <span class="spdj-main-respon-item-detail">
+                                A preference for work-related interdependence, group decision making, and pursuing shared goals.
+                            </span>
+                        </div>
+                        <div class="spdj-main-respon-item-chart-container">
+                            <div class="spdj-main-respon-item-chart">
+                                <div class="chartwell-pies">75+25+O</div>
+                                <div class="spdj-main-respon-item-stat">25%</div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <!-- Responsibilities Card Ends -->
             </div>
+            <!-- Cards Container Ends -->
         </div>
+        <!-- Main Row Container holding the side nav and the different cards Ends -->
     </div>
 
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
