Implemented the Behavioral Competencies card

--- a/success_profile_detail_job_mock.html
+++ b/success_profile_detail_job_mock.html
@@ -257,7 +257,7 @@
         <div class="row spdj-main-row">
             <!-- Side Navbar Begins -->
             <div class="spdj-side-nav-container">
-                <div class="spdj-side-nav" data-spy="affix" data-offset-top="730">
+                <div class="spdj-side-nav" data-spy="affix" data-offset-top="758">
                     <span class="spdj-side-nav-menu spdj-side-nav-title-active">JOB REQUIREMENTS</span>
                     <span class="spdj-side-nav-menu spdj-side-nav-menu-selected"><a href="#profile-det">Responsibilities</a></span>
                     <span class="spdj-side-nav-menu"><a href="#hiring-role">Behavioral Competencies</a></span>
@@ -427,6 +427,101 @@
                     </div>
                 </div>
                 <!-- Responsibilities Card Ends -->
+
+                <!-- Behavioral Competencies Card Begins -->
+                <div class="spdj-main-bcomp-card">
+                    <div class="spdj-main-bcomp-title-container">
+                        <span class="spdj-main-bcomp-title">
+                            <span class="spdj-main-bcomp-icon"><img src="images/behavioral-icon@2x.png"/></span>
+                            Behavioral Competencies
+                            <span class="spdj-main-bcomp-help"><span class="glyphicon glyphicon-question-sign"></span></span>
+                        </span>
+                        <span class="spdj-main-bcomp-lvl-title">Level Required</span>
+                    </div>
+                    <div class="spdj-main-bcomp-item-container">
+                        <div class="spdj-main-bcomp-item-text-container">
+                            <span class="spdj-main-bcomp-item-title">
+                                <span class="glyphicon glyphicon-circle-arrow-up spdj-main-bcomp-item-icon"></span>
+                                Presence
+                            </span>
+                            <span class="spdj-main-bcomp-item-detail">
+                                Prefers and entrepreneurial approach and limited organizational constraints.
+                            </span>
+                        </div>
+                        <div class="spdj-main-respon-item-chart-container">
+                            <div class="spdj-main-bcomp-item-chart">
+                                <div class="spdj-main-bcomp-item-stat">90%</div>
+                                <div class="spdj-main-bcomp-bar-chart"><img src="images/90pct_bluishgreen_bar_chart.png"/></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="spdj-main-bcomp-item-container">
+                        <div class="spdj-main-bcomp-item-text-container">
+                            <span class="spdj-main-bcomp-item-title">
+                                <span class="glyphicon glyphicon-circle-arrow-up spdj-main-bcomp-item-icon"></span>
+                                Striving
+                            </span>
+                            <span class="spdj-main-bcomp-item-detail">
+                                Motivated by achievement in the face of tough obstacles.
+                            </span>
+                        </div>
+                        <div class="spdj-main-respon-item-chart-container">
+                            <div class="spdj-main-bcomp-item-chart">
+                                <div class="spdj-main-bcomp-item-stat">90%</div>
+                                <div class="spdj-main-bcomp-bar-chart"><img src="images/90pct_bluishgreen_bar_chart.png"/></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="spdj-main-bcomp-item-container">
+                        <div class="spdj-main-bcomp-item-text-container">
+                            <span class="spdj-main-bcomp-item-title">
+                                Exploration
+                            </span>
+                            <span class="spdj-main-bcomp-item-detail">
+                                A preference for process-oriented, structured, and stable work environments.
+                            </span>
+                        </div>
+                        <div class="spdj-main-respon-item-chart-container">
+                            <div class="spdj-main-bcomp-item-chart">
+                                <div class="spdj-main-bcomp-item-stat">60%</div>
+                                <div class="spdj-main-bcomp-bar-chart"><img src="images/60pct_bluishgreen_bar_chart.png"/></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="spdj-main-bcomp-item-container">
+                        <div class="spdj-main-bcomp-item-text-container">
+                            <span class="spdj-main-bcomp-item-title">
+                                Positivity
+                            </span>
+                            <span class="spdj-main-bcomp-item-detail">
+                                Motivated to seek influence, recognition, and increasing levels of responsibility.
+                            </span>
+                        </div>
+                        <div class="spdj-main-respon-item-chart-container">
+                            <div class="spdj-main-bcomp-item-chart">
+                                <div class="spdj-main-bcomp-item-stat">50%</div>
+                                <div class="spdj-main-bcomp-bar-chart"><img src="images/50pct_bluishgreen_bar_chart.png"/></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="spdj-main-bcomp-item-container">
+                        <div class="spdj-main-bcomp-item-text-container">
+                            <span class="spdj-main-bcomp-item-title">
+                                Agreeableness
+                            </span>
+                            <span class="spdj-main-bcomp-item-detail">
+                                A preference for work-related interdependence, group decision making, and pursuing shared goals.
+                            </span>
+                        </div>
+                        <div class="spdj-main-respon-item-chart-container">
+                            <div class="spdj-main-bcomp-item-chart">
+                                <div class="spdj-main-bcomp-item-stat">25%</div>
+                                <div class="spdj-main-bcomp-bar-chart"><img src="images/25pct_bluishgreen_bar_chart.png"/></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Behavioral Competencies Card Ends -->
             </div>
             <!-- Cards Container Ends -->
         </div>
